src/test/ui/rfc1623.stderr
error[E0495]: cannot infer an appropriate lifetime due to conflicting requirements
  --> $DIR/rfc1623.rs:24:8
   |
LL |     f: &id,
   |        ^^^
   |
   = note: first, the lifetime cannot outlive any other region...
   = note: ...but the lifetime must also be valid for any other region...
note: ...so that the types are compatible
  --> $DIR/rfc1623.rs:24:8
   |
LL |     f: &id,
   |        ^^^
   = note: expected `std::ops::FnOnce<(&'a Foo<'b>,)>`
              found `std::ops::FnOnce<(&Foo<'_>,)>`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0495`.
